<resources>
    <string name="app_name">Antpod_app</string>
    <string name="login">LOGIN</string>
    <string name="newuser">NEW USER</string>
    <string name="register">Register</string>
    <string name="mobileno">Mobile Number</string>
    <string name="termsofservice">By signing up, you agree to text here</string>
    <string name="getotp">GET OTP</string>
    <string name="termslink"><u>Terms of Service</u></string>
    <string name="and">and</string>
    <string name="Privacy"><u>Privacy Policy</u></string>
    <string name="OTP">OTP</string>
    <string name="VERIFY">verify</string>
    <string name="aboutyou">About You</string>
    <string name="yourname">Your Name</string>
    <string name="dob">Date of Birth</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="next">NEXT</string>
    <string name="screen3">Screen 3</string>
    <string name="options">Options</string>
    <string name="dateselection">Date Selection</string>
    <string name="Dataentry">Data entry only</string>
    <string name="popup">POPUP</string>
    <string name="plantage">What is the Plant Age ?</string>
    <string name="number">Number Of</string>
    <string name="days">Days</string>
    <string name="done">DONE</string>
    <string name="weight">What is the Weight ?  </string>
    <string name="kg">Kgs</string>
    <string name="screen4">Screen 4</string>
    <string name="located">Where are you located ?</string>
    <string name="nearmylocation">Near My Current Location</string>
    <string name="addnewlocation">Add New Location</string>
    <string name="screen5">Screen 5</string>
    <string name="location">Location</string>
    <string name="DataEntryOnly">Data Entry Only</string>
    <string name="drawfarm">DRAW MY FARM</string>
    <string name="spinnerprompt">Select an item</string>
    
    <string-array name="options">
        <item>option 1</item>
        <item>option 2</item>
        <item>option 3</item>
        <item>option 4</item>
        <item>option 5</item>
        <item>option 6</item>
    </string-array>
</resources>