<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Aboutyou">

    <ImageView
        android:id="@+id/backimage"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:src="@drawable/backarrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/aboutyou"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:text="@string/aboutyou"
        android:textColor="@color/black"
        android:textFontWeight="@android:integer/config_longAnimTime"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203"
        tools:targetApi="p" />

    <EditText
        android:id="@+id/yourname"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginBottom="161dp"
        android:autofillHints=""
        android:background="@drawable/mobile_no_shape"
        android:hint="@string/yourname"
        android:textColor="@color/black"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginBottom="161dp"
        android:autofillHints=""
        android:textColor="@color/black"
        android:background="@drawable/mobile_no_shape"
        android:hint="@string/dob"
        android:inputType="none"
        android:focusableInTouchMode="false"
        android:textAlignment="gravity"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701" />

    <EditText
        android:id="@+id/state"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginBottom="161dp"
        android:textColor="@color/black"
        android:autofillHints=""
        android:background="@drawable/mobile_no_shape"
        android:hint="@string/state"
        android:inputType="text"
        android:textAlignment="gravity"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886" />

    <EditText
        android:id="@+id/district"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/mobile_no_shape"
        android:textColor="@color/black"
        android:hint="@string/district"
        android:inputType="text"
        android:textAlignment="gravity"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="327dp"
        android:layout_height="54dp"
        android:background="@drawable/newuser_button_shape"
        android:text="@string/next"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />
</androidx.constraintlayout.widget.ConstraintLayout>