<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Screen5">

    <ImageView
        android:id="@+id/backimage"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/backarrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/screen5"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:text="@string/screen5"
        android:textColor="@color/black"
        android:textFontWeight="@android:integer/config_longAnimTime"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142"
        tools:targetApi="p" />

    <EditText
        android:id="@+id/data"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginBottom="340dp"
        android:background="@drawable/mobile_no_shape"
        android:clickable="true"
        android:hint="@string/DataEntryOnly"
        android:importantForAutofill="no"
        android:textColor="@color/black"
        android:inputType="number"
        android:textAlignment="gravity"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/location"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/mobile_no_shape"
        android:hint="@string/location"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282"
        tools:targetApi="p" />

    <EditText
        android:id="@+id/data2"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/mobile_no_shape"
        android:hint="@string/Dataentry"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.655"
        tools:targetApi="p" />

    <ImageView
        android:id="@+id/not_mandatory"
        android:layout_width="147dp"
        android:layout_height="30dp"
        android:layout_marginEnd="57dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/notmandatory"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824" />

    <Button
        android:id="@+id/next"
        android:layout_width="327dp"
        android:layout_height="54dp"
        android:background="@drawable/newuser_button_shape"
        android:text="@string/next"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946" />

</androidx.constraintlayout.widget.ConstraintLayout>