<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="#ffffff"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="386dp"
        android:layout_height="350dp"
        android:background="#ffffff"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="369dp"
            android:layout_height="315dp"
            android:background="#ffffff"
            android:padding="10dp">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/located"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.242"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.073" />

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.423">

                <RadioButton
                    android:id="@+id/currentlocation"
                    android:layout_width="275dp"
                    android:layout_marginStart="10dp"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:text="@string/nearmylocation"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/addnewlocation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:checked="false"
                    android:text="@string/addnewlocation"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </RadioGroup>

            <Button
                android:id="@+id/done"
                android:layout_width="318dp"
                android:layout_height="50dp"
                android:layout_marginBottom="46dp"
                android:background="@drawable/newuser_button_shape"
                android:text="@string/done"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>